@startuml

abstract class Entite{
-dx : int
-dy : int
-<b>imageView : ImageView</b>
+getX() : int
+getY() : int
+setX(x : int)
+setY(y : int)
+etrePresent(dx : int, dy : int) : boolean
+{abstract}collision(objet : Entite)
+<b>getImageView() : ImageView</b>
+<b>setImageView(imageView : ImageView)</b>
}

abstract class Deplacable{
+deplacer(dx : int, dy : int)
+setDirection(direction String)
+getDirection() : String
}

class Perso{
+Perso(dx : int, dy : int)
+infligerDegats(v : Vivant)
+lancerFleche()
}

class Monstre{
+Monstre(dx : int, dy : int)
+infligerDegats(v : Vivant)
}

abstract class Vivant{
+subirDegats(degats : int)
+collision(objet : Entite)
}

interface Victime {
+subirDegats(degats : int)
}

interface Attaque {
+infligerDegats(v : Vivant)
}

class Fleche {
+collision(objet : Entite)
}

class Escalier{
-inxLevel : int
+<b>debloque</b>
+supprimer()
+collision(objet : Entite)
+<b><s>nextLevel()</s></b>
}

class Labyrinthe{
+murs : boolean[][]
+getSuivant(x : int, y : int, action : String) : int[]
+Labyrinthe(nom : String)
+deplacerPerso(action : String)
+etreFini() : boolean
+getLengthY() : int
+getLengthX() : int
+gerMur(x : int, y : int) : boolean
+<b>updateLaby()</b>
+<b>changerNiveau</b>(inxLevel : int)
}

Entite <|-- Deplacable
Deplacable <|-- Fleche
Deplacable <|-- Vivant
Perso --|> Vivant
Monstre --|> Vivant
Vivant ..|> Victime
Vivant ..|> Attaque
Fleche ..|> Attaque
Entite <|-- Escalier
Entite "*" <-- "1" Labyrinthe : entites
Labyrinthe "1" --> "1" Perso : perso
Labyrinthe "1" --> "1" Labyrinthe : <b>currentLabyrinthe</b>
Labyrinthe "1" --> "*" Labyrinthe : <b>allLevels</b>
@enduml